add logo and nav menu

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Уроки игры на гитаре</title>
     <link rel="stylesheet" href="css/style.css" />
+    <meta name="description" content="уроки на гитаре онлайн" />
+    <meta name="keywords" content="уроки гитары, онлайн уроки гитары" />
   </head>
-  <body></body>
+  <body>
+    <div class="main-section">
+      <div class="container main-section__nav-container">
+        <header class="main-section__header">
+          <a href="#"
+            ><img class="main-section__logo" src="./icons/logo.svg" alt=""
+          /></a>
+        </header>
+        <nav class="main-section__nav nav-menu">
+          <ul class="nav-menu__list">
+            <li class="nav-menu__list-item">Обо мне</li>
+            <li class="nav-menu__list-item">Занятия</li>
+            <li class="nav-menu__list-item">Запись</li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </body>
 </html>
