--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,17 @@
     <meta name="description" content="уроки на гитаре онлайн" />
     <meta name="keywords" content="уроки гитары, онлайн уроки гитары" />
   </head>
+  <!-- Первая секция -->
   <body>
     <div class="main-section">
       <div class="container main-section__nav-container">
+        <!-- Навигационный меню -->
         <header class="main-section__header">
           <a href="#"
-            ><img class="main-section__logo" src="./icons/logo.svg" alt=""
+            ><img
+              class="main-section__logo"
+              src="./icons/logo.svg"
+              alt="Изображения логотипа"
           /></a>
         </header>
         <nav class="main-section__nav nav-menu">
@@ -23,6 +28,19 @@
             <li class="nav-menu__list-item">Запись</li>
           </ul>
         </nav>
+      </div>
+      <div class="container main-section__content-container">
+        <!-- левая часть первой секций -->
+        <div class="left-wrapper">
+          <img
+            class="left-wrapper__img"
+            src="./img/Фото гитариста.png"
+            alt="фото гитариста"
+          />
+          <div class="left-wrapper__rectangle-blue"></div>
+          <div class="left-wrapper__rectangle-orange"></div>
+          <div class="left-wrapper__rectangle-grey"></div>
+        </div>
       </div>
     </div>
   </body>
