add right wrapper

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/67fa627879.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Уроки игры на гитаре</title>
     <link rel="stylesheet" href="css/style.css" />
     <meta name="description" content="уроки на гитаре онлайн" />
@@ -40,6 +44,34 @@
           <div class="left-wrapper__rectangle-blue"></div>
           <div class="left-wrapper__rectangle-orange"></div>
           <div class="left-wrapper__rectangle-grey"></div>
+        </div>
+        <!-- правая часть первой секций -->
+        <div class="right-wrapper">
+          <div class="right-wrapper__icons-box icons">
+            <div class="icons__item"><i class="fa-brands fa-skype"></i></div>
+            <div class="icons__item"><i class="fa-brands fa-vk"></i></div>
+            <div class="icons__item"><i class="fa-brands fa-telegram"></i></div>
+            <div class="icons__item">
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+          </div>
+          <h1 class="right-wrapper__title title">
+            Я Виктор
+            <hr class="title__hr" />
+          </h1>
+          <p class="right-wrapper__text">
+            Репетитор игры на гитаре с семилетним опытом преподавания
+          </p>
+          <div class="right-wrapper__button buttons">
+            <button class="buttons__main-btn">
+              Забранировать <br />
+              урок
+            </button>
+            <div class="right-wrapper__icon-btn buttons__icon-btn">
+              <img src="./icons/Иконка чата 1.svg" alt="chat" />
+              <p class="buttons__text">Есть <br />вопросы?</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
